--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,21 @@
 @import "tailwindcss";
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@theme {
+    --color-blue-400: hsl(180, 66%, 49%);
+    --color-purple-950: hsl(257, 27%, 26%);
+    --color-red-400: hsl(0, 87%, 67%);
+    --color-gray-400: hsl(0, 0%, 75%);
+    --color-gray-500: hsl(257, 7%, 63%);
+    --color-gray-900: hsl(255, 11%, 22%);
+    --color-gray-950: hsl(260, 8%, 14%);
+}
+
+
+
+
+
+
+.attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); }
