HTML e CSS Finalizados

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -7,8 +7,10 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-600: oklch(57.7% 0.245 27.325);
     --color-amber-200: oklch(92.4% 0.12 95.746);
     --color-blue-400: hsl(180, 66%, 49%);
+    --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-purple-950: hsl(257, 27%, 26%);
     --color-gray-400: hsl(0, 0%, 75%);
     --color-gray-500: hsl(257, 7%, 63%);
@@ -202,29 +204,8 @@
   .static {
     position: static;
   }
-  .-top-0 {
-    top: calc(var(--spacing) * -0);
-  }
-  .-top-1 {
-    top: calc(var(--spacing) * -1);
-  }
-  .-top-1\/2 {
-    top: calc(calc(1/2 * 100%) * -1);
-  }
-  .-top-7 {
-    top: calc(var(--spacing) * -7);
-  }
   .-top-8 {
     top: calc(var(--spacing) * -8);
-  }
-  .-top-12 {
-    top: calc(var(--spacing) * -12);
-  }
-  .-top-16 {
-    top: calc(var(--spacing) * -16);
-  }
-  .top-0 {
-    top: calc(var(--spacing) * 0);
   }
   .top-1 {
     top: calc(var(--spacing) * 1);
@@ -232,29 +213,8 @@
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
-  .top-8 {
-    top: calc(var(--spacing) * 8);
-  }
-  .-bottom-12 {
-    bottom: calc(var(--spacing) * -12);
-  }
   .-bottom-16 {
     bottom: calc(var(--spacing) * -16);
-  }
-  .bottom-0 {
-    bottom: calc(var(--spacing) * 0);
-  }
-  .-left-0 {
-    left: calc(var(--spacing) * -0);
-  }
-  .-left-1 {
-    left: calc(var(--spacing) * -1);
-  }
-  .-left-1\/2 {
-    left: calc(calc(1/2 * 100%) * -1);
-  }
-  .left-0 {
-    left: calc(var(--spacing) * 0);
   }
   .left-1 {
     left: calc(var(--spacing) * 1);
@@ -265,41 +225,26 @@
   .left-8 {
     left: calc(var(--spacing) * 8);
   }
-  .-z-0 {
-    z-index: calc(0 * -1);
-  }
-  .-z-1 {
-    z-index: calc(1 * -1);
-  }
   .-z-10 {
     z-index: calc(10 * -1);
-  }
-  .z-0 {
-    z-index: 0;
-  }
-  .z-1 {
-    z-index: 1;
   }
   .z-10 {
     z-index: 10;
   }
-  .z-50 {
-    z-index: 50;
-  }
-  .z-100 {
-    z-index: 100;
-  }
   .m-auto {
     margin: auto;
+  }
+  .mx-3 {
+    margin-inline: calc(var(--spacing) * 3);
+  }
+  .mx-32 {
+    margin-inline: calc(var(--spacing) * 32);
   }
   .mx-36 {
     margin-inline: calc(var(--spacing) * 36);
   }
   .my-6 {
     margin-block: calc(var(--spacing) * 6);
-  }
-  .mt-6 {
-    margin-top: calc(var(--spacing) * 6);
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
@@ -309,6 +254,15 @@
   }
   .mt-36 {
     margin-top: calc(var(--spacing) * 36);
+  }
+  .mr-28 {
+    margin-right: calc(var(--spacing) * 28);
+  }
+  .mr-72 {
+    margin-right: calc(var(--spacing) * 72);
+  }
+  .mr-96 {
+    margin-right: calc(var(--spacing) * 96);
   }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
@@ -325,9 +279,6 @@
   .table {
     display: table;
   }
-  .aspect-square {
-    aspect-ratio: 1 / 1;
-  }
   .h-1 {
     height: calc(var(--spacing) * 1);
   }
@@ -337,92 +288,53 @@
   .h-1\/2 {
     height: calc(1/2 * 100%);
   }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
+  .h-4 {
+    height: calc(var(--spacing) * 4);
   }
-  .h-2\.5 {
-    height: calc(var(--spacing) * 2.5);
+  .h-6 {
+    height: calc(var(--spacing) * 6);
   }
-  .h-14 {
-    height: calc(var(--spacing) * 14);
+  .h-10 {
+    height: calc(var(--spacing) * 10);
   }
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
-  }
-  .h-30 {
-    height: calc(var(--spacing) * 30);
-  }
   .h-32 {
     height: calc(var(--spacing) * 32);
-  }
-  .h-40 {
-    height: calc(var(--spacing) * 40);
-  }
-  .h-52 {
-    height: calc(var(--spacing) * 52);
-  }
-  .h-\[80\%\] {
-    height: 80%;
   }
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
-  .w-1\/1 {
-    width: calc(1/1 * 100%);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
-  }
-  .w-1\/3 {
-    width: calc(1/3 * 100%);
-  }
-  .w-1\/4 {
-    width: calc(1/4 * 100%);
   }
   .w-2 {
     width: calc(var(--spacing) * 2);
   }
-  .w-2\.5 {
-    width: calc(var(--spacing) * 2.5);
-  }
   .w-2\/3 {
     width: calc(2/3 * 100%);
   }
-  .w-3xl {
-    width: var(--container-3xl);
+  .w-4 {
+    width: calc(var(--spacing) * 4);
   }
-  .w-5 {
-    width: calc(var(--spacing) * 5);
+  .w-6 {
+    width: calc(var(--spacing) * 6);
   }
-  .w-11 {
-    width: calc(var(--spacing) * 11);
-  }
-  .w-11\/12 {
-    width: calc(11/12 * 100%);
+  .w-10 {
+    width: calc(var(--spacing) * 10);
   }
   .w-16 {
     width: calc(var(--spacing) * 16);
   }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
-  }
   .w-30 {
     width: calc(var(--spacing) * 30);
   }
-  .w-52 {
-    width: calc(var(--spacing) * 52);
-  }
-  .w-fit {
-    width: fit-content;
+  .w-100 {
+    width: calc(var(--spacing) * 100);
   }
   .w-full {
     width: 100%;
-  }
-  .max-w-4xl {
-    max-width: var(--container-4xl);
   }
   .basis-64 {
     flex-basis: calc(var(--spacing) * 64);
@@ -479,23 +391,35 @@
   .gap-x-6 {
     column-gap: calc(var(--spacing) * 6);
   }
+  .gap-x-8 {
+    column-gap: calc(var(--spacing) * 8);
+  }
+  .gap-x-10 {
+    column-gap: calc(var(--spacing) * 10);
+  }
+  .gap-x-24 {
+    column-gap: calc(var(--spacing) * 24);
+  }
+  .gap-x-32 {
+    column-gap: calc(var(--spacing) * 32);
+  }
+  .gap-y-3 {
+    row-gap: calc(var(--spacing) * 3);
+  }
   .gap-y-4 {
     row-gap: calc(var(--spacing) * 4);
   }
   .gap-y-5 {
     row-gap: calc(var(--spacing) * 5);
   }
-  .self-center {
-    align-self: center;
-  }
-  .self-end {
-    align-self: flex-end;
-  }
   .self-start {
     align-self: flex-start;
   }
-  .rounded {
-    border-radius: 0.25rem;
+  .justify-self-center {
+    justify-self: center;
+  }
+  .justify-self-start {
+    justify-self: flex-start;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
@@ -512,65 +436,21 @@
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
-  .rounded-b-full {
-    border-bottom-right-radius: calc(infinity * 1px);
-    border-bottom-left-radius: calc(infinity * 1px);
-  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-8 {
-    border-style: var(--tw-border-style);
-    border-width: 8px;
-  }
-  .border-x {
-    border-inline-style: var(--tw-border-style);
-    border-inline-width: 1px;
-  }
-  .border-x-2 {
-    border-inline-style: var(--tw-border-style);
-    border-inline-width: 2px;
-  }
-  .border-x-4 {
-    border-inline-style: var(--tw-border-style);
-    border-inline-width: 4px;
-  }
-  .border-y-2 {
-    border-block-style: var(--tw-border-style);
-    border-block-width: 2px;
-  }
-  .border-y-4 {
-    border-block-style: var(--tw-border-style);
-    border-block-width: 4px;
-  }
-  .border-t-2 {
-    border-top-style: var(--tw-border-style);
-    border-top-width: 2px;
-  }
-  .border-t-4 {
-    border-top-style: var(--tw-border-style);
-    border-top-width: 4px;
-  }
-  .border-t-10 {
-    border-top-style: var(--tw-border-style);
-    border-top-width: 10px;
-  }
-  .border-l-4 {
-    border-left-style: var(--tw-border-style);
-    border-left-width: 4px;
-  }
-  .border-blue-400 {
-    border-color: var(--color-blue-400);
-  }
-  .bg-amber-200 {
-    background-color: var(--color-amber-200);
-  }
   .bg-blue-400 {
     background-color: var(--color-blue-400);
   }
+  .bg-blue-500 {
+    background-color: var(--color-blue-500);
+  }
   .bg-gray-400 {
     background-color: var(--color-gray-400);
+  }
+  .bg-gray-900 {
+    background-color: var(--color-gray-900);
   }
   .bg-purple-950 {
     background-color: var(--color-purple-950);
@@ -578,71 +458,8 @@
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-\[url\(\"\"\)\] {
-    background-image: url("");
-  }
-  .bg-\[url\(\'\/src\/images\/bg-shorten-desktop\.svg\'\)\] {
-    background-image: url('/src/images/bg-shorten-desktop.svg');
-  }
-  .bg-\[url\(\)\] {
-    background-image: url();
-  }
-  .bg-\[url\(\.\/\)\] {
-    background-image: url(./);
-  }
-  .bg-\[url\(\.\/src\/\)\] {
-    background-image: url(./src/);
-  }
-  .bg-\[url\(\.\/src\/i\)\] {
-    background-image: url(./src/i);
-  }
-  .bg-\[url\(\.\/src\/images\)\] {
-    background-image: url(./src/images);
-  }
-  .bg-\[url\(\.\/src\/images\/\)\] {
-    background-image: url(./src/images/);
-  }
-  .bg-\[url\(\.\/src\/images\/C\:\\Users\\user\\Documents\\Projetos\\url-shortening-api-master\\src\\images\\bg-boost-desktop\.svg\)\] {
-    background-image: url(./src/images/C:\Users\user\Documents\Projetos\url-shortening-api-master\src\images\bg-boost-desktop.svg);
-  }
-  .bg-\[url\(\.\/src\/images\/bg-boost-desktop\.svg\)\] {
-    background-image: url(./src/images/bg-boost-desktop.svg);
-  }
-  .bg-\[url\(\/src\/\)\] {
-    background-image: url(/src/);
-  }
-  .bg-\[url\(\/src\/images\/\)\] {
-    background-image: url(/src/images/);
-  }
-  .bg-\[url\(\/src\/images\/b\)\] {
-    background-image: url(/src/images/b);
-  }
-  .bg-\[url\(\/src\/images\/bg-\)\] {
-    background-image: url(/src/images/bg-);
-  }
-  .bg-\[url\(\/src\/images\/bg-bo\)\] {
-    background-image: url(/src/images/bg-bo);
-  }
-  .bg-\[url\(\/src\/images\/bg-boo\)\] {
-    background-image: url(/src/images/bg-boo);
-  }
-  .bg-\[url\(\/src\/images\/bg-boost\)\] {
-    background-image: url(/src/images/bg-boost);
-  }
-  .bg-\[url\(\/src\/images\/bg-boost-desktop\)\] {
-    background-image: url(/src/images/bg-boost-desktop);
-  }
-  .bg-\[url\(\/src\/images\/bg-boost-desktop\.pn\)\] {
-    background-image: url(/src/images/bg-boost-desktop.pn);
-  }
   .bg-\[url\(\/src\/images\/bg-boost-desktop\.svg\)\] {
     background-image: url(/src/images/bg-boost-desktop.svg);
-  }
-  .bg-\[url\(\/src\/images\/bg-sho\)\] {
-    background-image: url(/src/images/bg-sho);
-  }
-  .bg-\[url\(\/src\/images\/bg-shorten\)\] {
-    background-image: url(/src/images/bg-shorten);
   }
   .bg-\[url\(\/src\/images\/bg-shorten-desktop\.svg\)\] {
     background-image: url(/src/images/bg-shorten-desktop.svg);
@@ -653,11 +470,8 @@
   .bg-no-repeat {
     background-repeat: no-repeat;
   }
-  .p-1 {
-    padding: calc(var(--spacing) * 1);
-  }
-  .p-1\.5 {
-    padding: calc(var(--spacing) * 1.5);
+  .fill-gray-400 {
+    fill: var(--color-gray-400);
   }
   .p-2 {
     padding: calc(var(--spacing) * 2);
@@ -665,47 +479,26 @@
   .p-2\.5 {
     padding: calc(var(--spacing) * 2.5);
   }
-  .p-3 {
-    padding: calc(var(--spacing) * 3);
-  }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
-  }
   .p-5 {
     padding: calc(var(--spacing) * 5);
   }
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
-  .p-9 {
-    padding: calc(var(--spacing) * 9);
-  }
   .p-10 {
     padding: calc(var(--spacing) * 10);
-  }
-  .p-16 {
-    padding: calc(var(--spacing) * 16);
-  }
-  .p-20 {
-    padding: calc(var(--spacing) * 20);
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
+  .px-36 {
+    padding-inline: calc(var(--spacing) * 36);
+  }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
   }
-  .py-20 {
-    padding-block: calc(var(--spacing) * 20);
-  }
   .py-32 {
     padding-block: calc(var(--spacing) * 32);
-  }
-  .pt-4 {
-    padding-top: calc(var(--spacing) * 4);
-  }
-  .pt-5 {
-    padding-top: calc(var(--spacing) * 5);
   }
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
@@ -713,21 +506,17 @@
   .pr-10 {
     padding-right: calc(var(--spacing) * 10);
   }
+  .pr-12 {
+    padding-right: calc(var(--spacing) * 12);
+  }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
   }
   .pb-2\.5 {
     padding-bottom: calc(var(--spacing) * 2.5);
   }
-  .pb-5 {
-    padding-bottom: calc(var(--spacing) * 5);
-  }
   .text-center {
     text-align: center;
-  }
-  .text-2xl {
-    font-size: var(--text-2xl);
-    line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
   .text-3xl {
     font-size: var(--text-3xl);
@@ -781,6 +570,9 @@
   .text-gray-950 {
     color: var(--color-gray-950);
   }
+  .text-red-600 {
+    color: var(--color-red-600);
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -790,37 +582,6 @@
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
-  }
-  .md\:top-1\/2 {
-    @media (width >= 48rem) {
-      top: calc(1/2 * 100%);
-    }
-  }
-  .md\:left-0 {
-    @media (width >= 48rem) {
-      left: calc(var(--spacing) * 0);
-    }
-  }
-  .md\:h-0 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 0);
-    }
-  }
-  .md\:w-\[80\%\] {
-    @media (width >= 48rem) {
-      width: 80%;
-    }
-  }
-  .md\:flex-row {
-    @media (width >= 48rem) {
-      flex-direction: row;
-    }
-  }
-  .md\:border-t-4 {
-    @media (width >= 48rem) {
-      border-top-style: var(--tw-border-style);
-      border-top-width: 4px;
-    }
   }
 }
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
